<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RSS Reader</string>
    <string name="title_reddit">Java on Reddit</string>
    <string name="title_cbc">CBC News Manitoba</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="open_button">View Article</string>
    <string name="open_browser_button">Open In Browser</string>
    <string name="title_activity_web_view">View Article</string>
    <string name="title_activity_details">Article Details</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_settings">Settings</string>
    <string name="setting_max_results">Maximum Results</string>
    <string name="setting_order_by">Sort Order</string>
    <string name="setting_theme">Color Theme</string>
    <string name="setting_immediate">List Click</string>
    <string name="setting_tip_immediate">Open list items in default browser immediately</string>
    <string-array name="max_results_array">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>Unlimited</item>
    </string-array>

    <string-array name="order_by_array">
        <item>Default</item>
        <item>Date</item>
        <item>Alphabetical</item>

    </string-array>

    <string-array name="color_theme">
        <item>Default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>

</resources>
