<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ca.owenpeterson.rssreader.views.activities.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_max_results"
            android:text="@string/setting_max_results"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="15dp"
            />

        <Spinner
            android:id="@+id/max_results_spinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/label_max_results"></Spinner>

        <TextView
            android:id="@+id/label_order_by"
            android:text="@string/setting_order_by"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="15dp"
            android:layout_below="@+id/label_max_results"
            />

        <Spinner
            android:id="@+id/order_by_spinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/label_order_by"
            android:layout_below="@id/max_results_spinner"></Spinner>

        <TextView
            android:id="@+id/label_theme"
            android:text="@string/setting_theme"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="15dp"
            android:layout_below="@+id/label_order_by"
            />

        <Spinner
            android:id="@+id/theme_spinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/label_theme"
            android:layout_below="@id/order_by_spinner"></Spinner>

        <TextView
            android:id="@+id/label_immediate"
            android:text="@string/setting_immediate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="15dp"
            android:layout_below="@+id/label_theme"
            />
        <TextView
            android:id="@+id/label_tip_immedate"
            android:text="@string/setting_tip_immediate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="8dp"
            android:layout_below="@+id/label_immediate"
            />

        <Switch
            android:id="@+id/switch_immediate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/label_immediate"
            android:layout_below="@id/theme_spinner"/>
        </RelativeLayout>

</ScrollView>
